Sep 2, 2003

  * FIXED: rdfe_retractall/[3,4] to properly update the journal.

  * FIXED: rdf_assert duplicate administration (crashes rdf_retractall on
    assertion failure).

Aug 18, 2003

  * MODIFIED: Assume ids starting with __ are anonymous

Aug 6, 2003

  * FIXED: namespace generation in rdf_save/2.  Laura Hollink

Aug 01, 2003

  * ADDED: rdf_save/[1,2] to generate rdf:parseType=Collection for anonymous
    rdf lists.

  * FIXED: rdf_save/[1,2]

Jun 23, 2003

  * ADDED: rdf_generation/1

Jun 20, 2003

  * FIXED: Memory leak in rdf_reachable/3.

  * FIXED: Various installation issues

Jun 10, 2003

  * Initial public version